--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 version : "3.3"
 services :
   web :
-     image: "trainwithshubham1/notes-app:latest"
+     image: "pranaytejach/notes-app:latest"
      ports :
          - "8000:8000"
